# tesi

./: .gitignore  Derivation_of_Gradients.md  ParaFlows_R2.py  README.md  Run_budget.sh  define_budget.py  extract_data.py  generate_ground_truth.py  generate_ground_truth_1.py  generate_ground_truth_2.py  generate_ground_truth_3.py  gradient_H1.py  gradient_L2.py  gradient_az.py  gradients.py  inestigate_best_steps.py  main_opt.py  main_opt_test_2.py  make_table.py  optimizer.py  pyproject.toml  solver_firedrake_default.txt  solver_firedrake_lu.txt  test_1.py  test_2.py  test_3.py  utils.py
NG_solve/: README.md  define_budget_NG.py  gradients_NG.py  test_NG_1.py  test_NG_2.py
old/: gradient_H1.py  gradient_L2.py  gradient_a0.py  gradient_az.py  prova_claude.py  prova_gemini.py
random_disorder_potential/: random_disorder_potential_0.vtu
src/: Gradient_Descent.py  Optimizer.py  ParaFlowS.py  __init__.py
src/gradients/: Gradients.py  H1_Gradients.py  L2_Gradients.py  __init__.py  a0_Gradients.py  az_Gradients.py
test/: __init__.py  make_conv_table.py  plot_2d.py  plot_comparison_2d.py  pot_3.py  test_plot_2d.py
test_budget/: README.md  Run_budget.sh  compute_budget.py  plot_budget.py
test_performance/: Generate_all_ground_truth.sh  Run_all_GD_tests.sh  Run_all_tests.sh  generate_ground_truth.py  plot_results.py  plot_results_GD.py  plot_results_PF.py
test_performance/test_case1/: settings_test1.1.json  settings_test1.2.json  settings_test1.3.json
test_performance/test_case2/: settings_test2.json
test_performance/test_case3/: __init__.py  (+1 more)
