[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesi"
version = "0.1.0"
description = "ParaFlowS optimization and benchmarking code"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Paolo" } ]
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
